@@ -1,4 +1,8 @@
 2005-06-23  Kazuhiko  <kazuhiko@fdiary.net>
+	* style/default/parser.rb (parse_line): the format of table
+	headers is changed from '||~' to '||!' (suggested by Kouhei
+	Yanagita).
+
 	* hiki/command.rb, hiki/plugin.rb, hiki/db/flatfile.rb,
 	template/edit.html: support minor change edit that does not update
 	the timestamp (by hadai).
